crates/math-core/tests/snapshots/error_test__middle_with_non_delimiter.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\left( 1 \\middle x \\right)"
---
Error: There must be a parenthesis after "\middle", but not found.
   ╭─[ <input>:1:18 ]
   │
 1 │ \left( 1 \middle x \right)
   │                  ┬  
   │                  ╰── expected a delimiter after "\middle"
───╯
